fix: Replace overflow: scrol with overflow: auto

--- a/client/components/FormattingBar/media/media.scss
+++ b/client/components/FormattingBar/media/media.scss
@@ -6,7 +6,7 @@
 	.options {
 		flex: 0 0 auto;
 		border-right: 1px solid #ddd;
-		overflow: scroll;
+		overflow: auto;
 	}
 	.formatting-bar_media-component-content {
 		flex: 1 1 auto;
@@ -49,7 +49,7 @@
 			align-items: center;
 			justify-content: center;
 			&.scroll {
-				overflow: scroll;
+				overflow: auto;
 			}
 		}
 		iframe {
