--- a/client/components/FormattingBarLegacy/Controls/controls.scss
+++ b/client/components/FormattingBarLegacy/Controls/controls.scss
@@ -40,7 +40,7 @@
 		width: 100%;
 		// height: 50px;
 		height: 45px;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 	textarea {
 		height: 45px;
