--- a/client/containers/Pub/PubHeader/collections/collectionBrowser.scss
+++ b/client/containers/Pub/PubHeader/collections/collectionBrowser.scss
@@ -3,7 +3,7 @@
 .collection-browser-component_menu {
     border-left: 0;
     border-right: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 50vh;
     min-height: 50px;
     max-width: 80vw;
